[package]
name = "obsidian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.23.0", features = ["all-widgets"]}
crossterm = "0.25"
fstrings = "0.2.3"
toml = "0.5.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = {version = "1.0"}
directories = "5.0.0"
whoami = "*"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"